--- a/web/debugger/clock_info.html
+++ b/web/debugger/clock_info.html
@@ -7,6 +7,10 @@
   <span class="label label-primary" id="debClock">0</span>
 </span>
 <span class="debColClockSpan">
+  <b>Lines:</b>
+  <span class="label label-primary" id="debClockLines">0</span>
+</span>
+<span class="debColClockSpan">
   <b>Frames:</b>
   <span class="label label-primary" id="debClockFrames">0</span>
 </span>
