--- a/web/debugger/registers.html
+++ b/web/debugger/registers.html
@@ -10,13 +10,17 @@
   </thead>
   <tbody>
     <tr><td colspan="2">
-      <span class="label label-default cpur-flag">fl</span>
-      <span class="label label-default cpur-flag">fl</span>
-      <span class="label label-default cpur-flag">fl</span>
-      <span class="label label-default cpur-flag">fl</span>
-      <span class="label label-default cpur-spe-flag">fl</span>
-      <span class="label label-default cpur-spe-flag">fl</span>
-      <span class="label label-default cpur-spe-flag">fl</span>
+      <div>
+        <span class="label label-default cpur-flag">fl</span>
+        <span class="label label-default cpur-flag">fl</span>
+        <span class="label label-default cpur-flag">fl</span>
+        <span class="label label-default cpur-flag">fl</span>
+      </div>
+      <div>
+        <span class="label label-default cpur-spe-flag">fl</span>
+        <span class="label label-default cpur-spe-flag">fl</span>
+        <span class="label label-default cpur-spe-flag">fl</span>
+      </div>
     </td></tr>
     <tr><td>reg0</td><td>0000</td></tr>
     <tr><td>reg1</td><td>0000</td></tr>
